@@ -1,6 +1,7 @@
 Xfce 4.6rc2 (Xfce 4.5.99.2):
 
   * Fix menu plugin crash when selecting custom menu file (bug 4879).
+  * Only regen the monitor on changes to files we care about (bug 4979).
 
 
 Xfce 4.6rc1 (Xfce 4.5.99.1):
